--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,6 @@ jobs:
           curl -ssL https://magic.modular.com | bash
           source $HOME/.bash_profile
           magic run test
+          magic run integration_test
+          magic run integration_tests
 
