try fixing crash in docker containers

--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -3,7 +3,7 @@ authors = ["saviorand"]
 channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community"]
 description = "Simple and fast HTTP framework for Mojo!"
 name = "lightbug_http"
-platforms = ["osx-arm64", "linux-64"]
+platforms = ["osx-arm64", "linux-64", "linux-aarch64"]
 version = "0.1.12"
 
 [tasks]
