--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -3,8 +3,8 @@ authors = ["saviorand"]
 channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix.dev/mojo-community"]
 description = "Simple and fast HTTP framework for Mojo!"
 name = "lightbug_http"
-platforms = ["osx-arm64", "linux-64"]
-version = "0.1.13"
+platforms = ["osx-arm64", "linux-64", "linux-aarch64"]
+version = "0.1.14"
 
 [tasks]
 build = { cmd = "rattler-build build --recipe recipes -c https://conda.modular.com/max -c conda-forge --skip-existing=all", env = {MODULAR_MOJO_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo"} }
@@ -25,7 +25,7 @@ bench_server = { cmd = "bash scripts/bench_server.sh" }
 
 [dependencies]
 max = ">=25.1.0,<26"
-small_time = "==0.1.8"
+small_time = "==25.1.0"
 
 [feature.integration-tests.dependencies]
 requests = ">=2.32.3,<3"
