--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,4 +12,4 @@ repos:
         entry: magic run mojo format -l 120
         language: system
         files: '\.(mojo|🔥)$'
-        stages: [commit]
+        stages: [pre-commit]
