--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -1,10 +1,10 @@
 [project]
 authors = ["saviorand"]
-channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix.dev/mojo-community"]
+channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community"]
 description = "Simple and fast HTTP framework for Mojo!"
 name = "lightbug_http"
 platforms = ["osx-arm64", "linux-64", "linux-aarch64"]
-version = "0.1.16"
+version = "0.1.17"
 
 [tasks]
 build = { cmd = "rattler-build build --recipe recipes -c https://conda.modular.com/max -c conda-forge --skip-existing=all", env = {MODULAR_MOJO_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo"} }
@@ -24,8 +24,8 @@ bench = { cmd = "magic run mojo -I . benchmark/bench.mojo" }
 bench_server = { cmd = "bash scripts/bench_server.sh" }
 
 [dependencies]
-max = ">=25.1.0,<26"
-small_time = "==25.1.0"
+max = ">=25.2.0,<25.3.0"
+small_time = ">=25.2.0,<25.3.0"
 
 [feature.integration-tests.dependencies]
 requests = ">=2.32.3,<3"
